# PaperAgentSystem

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  package.json  pyproject.toml  start-paperagent.cmd  stop-paperagent.cmd  tsconfig.json  unified_paper_agent_build_guide.md  vitest.config.ts
academic_tasks/: __init__.py  comparison.py  drafting.py  literature_review.py  paper_analysis.py  rewriting.py  writing_brief.py
agent_runtime/: __init__.py  context_builder.py  executor.py  nodes.py  orchestrator.py  planner.py  requirement_clarifier.py  schema.py  skill_selector.py  state_machine.py  stub.py  verifier.py
conversations/: __init__.py  service.py
core/: __init__.py  errors.py
deploy/: Dockerfile.python  Dockerfile.web  __init__.py  service_runtime.py
develop_guide/: 01-技术栈文档.md  02-产品架构文档.md  03-执行计划文档.md  DEVELOPMENT_PLAN.md  process_log.md
docs/: DEMO_SCRIPT.md  DEPLOYMENT.md  EVALUATION_REPORT.md  MODULE_DEPENDENCIES.md  SECURITY_REPORT.md
document_processing/: __init__.py  ocr.py  pdf_parser.py  pipeline.py  schema.py
evaluation/: __init__.py  builtin.py  cli.py  final_acceptance.py  metadata.py  runner.py  schema.py
infrastructure/: config.py
memory/: __init__.py  long_term.py  short_term.py
models/: __init__.py  client.py  registry.py  registry.yaml  runtime.py
observability/: __init__.py  tracing.py
rag/: __init__.py  citations.py  indexing.py  retrieval.py  schema.py
scratch/: main.py
scripts/: start-paperagent.ps1  stop-paperagent.ps1
security/: __init__.py  file_validation.py  guard.py
skills/: loader.py
subagents/: __init__.py  manager.py  paper_card.schema.json  paper_reader.py  paper_reader_agent.yaml
tests/: conftest.py  test_academic_drafting.py  test_academic_rewriting.py  test_academic_tools.py  test_agent_runtime.py  test_agent_runtime_stub.py  test_api_app.py  test_citation_answers.py  test_context_builder.py  test_conversation_service.py  test_deployment.py  test_disabled_sandbox.py  test_document_indexing.py  test_document_tools.py  test_executor.py  (+36 more)
training/: README.md  __init__.py  __main__.py  bundle.py  cli.py  contracts.py  dataset.py  preflight.py  profiles.py  pyproject.toml
training/configs/: profiles.yaml
training/exported/: agent_schema.json  manifest.json  tool_definitions.json  training_sample.schema.json
training/fixtures/: router.sample.jsonl
(+150 files in other folders)
