[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperagent"
version = "0.1.0"
description = "Academic writing assistant with Agent runtime"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "PaperAgent Team" }
]
keywords = ["agent", "nlp", "paper", "writing", "academic"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.18.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "minio>=7.2.0",
    "pymupdf>=1.24.0",
    "paddleocr>=2.8.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=0.42b0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "sqlalchemy[mypy]>=2.0.0",
    "testcontainers>=3.7.0",
    "types-PyYAML>=6.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "integration: requires external containers or services",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "app", "agent_runtime", "conversations", "tasks"]
