[project]
name = "paperagent-training"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.4",
  "transformers>=4.45",
  "datasets>=3.0",
  "peft>=0.13",
  "trl>=0.11",
  "accelerate>=1.0",
  "bitsandbytes>=0.44; platform_system != 'Windows'",
]
